project('OpenRiichi', 'vala', 'c')

# We use subdir instead of subproject so we don't have to recompile everything when we change something in libengine
subdir('Engine')

dataDir = get_option('prefix') / get_option('datadir') / 'OpenRiichi'
add_project_arguments('-DOPENRIICHI_SEARCH_DIR="' + dataDir +  '"', language: 'c')

dependencies = [
    valac.find_library('os', dirs: meson.current_source_dir() + '/vapi', required: false)
] + engine_dependencies

sources = files(
    'source/main.vala',
    'source/Environment.vala',
    'source/Game/GameController.vala',
    'source/Game/Logic/AnimationTimings.vala',
    'source/Game/Logic/ClientAction.vala',
    'source/Game/Logic/ClientMessage.vala',
    'source/Game/Logic/ClientRoundState.vala',
    'source/Game/Logic/GameLog.vala',
    'source/Game/Logic/GamePlayer.vala',
    'source/Game/Logic/GameStartInfo.vala',
    'source/Game/Logic/GameState.vala',
    'source/Game/Logic/IGameConnection.vala',
    'source/Game/Logic/LobbyMessages.vala',
    'source/Game/Logic/RoundLog.vala',
    'source/Game/Logic/RoundState.vala',
    'source/Game/Logic/ServerAction.vala',
    'source/Game/Logic/ServerMessage.vala',
    'source/Game/Logic/Tile.vala',
    'source/Game/Logic/TileRules.vala',
    'source/Game/Logic/TimeStamp.vala',
    'source/Game/Logic/VersionInfo.vala',
    'source/Game/MusicPlayer.vala',
    'source/Game/Options.vala',
    'source/Game/Rendering/GameAnimationTimings.vala',
    'source/Game/Rendering/GameRenderView.vala',
    'source/Game/Rendering/GameScene.vala',
    'source/Game/Rendering/IGameRenderer.vala',
    'source/Game/Rendering/Menu/GameEscapeMenuView.vala',
    'source/Game/Rendering/Menu/GameMenuButton.vala',
    'source/Game/Rendering/Menu/GameMenuView.vala',
    'source/Game/Rendering/Menu/ScoringDoraView.vala',
    'source/Game/Rendering/Menu/ScoringHandView.vala',
    'source/Game/Rendering/Menu/ScoringInnerView.vala',
    'source/Game/Rendering/Menu/ScoringPlayerElement.vala',
    'source/Game/Rendering/Menu/ScoringPointsView.vala',
    'source/Game/Rendering/Menu/ScoringStickView.vala',
    'source/Game/Rendering/Menu/ScoringView.vala',
    'source/Game/Rendering/RenderAction.vala',
    'source/Game/Rendering/RenderCalls.vala',
    'source/Game/Rendering/RenderHand.vala',
    'source/Game/Rendering/RenderPlayer.vala',
    'source/Game/Rendering/RenderPond.vala',
    'source/Game/Rendering/RenderStick.vala',
    'source/Game/Rendering/RenderTable.vala',
    'source/Game/Rendering/RenderTile.vala',
    'source/Game/Rendering/RenderWall.vala',
    'source/Game/ServerSettings.vala',
    'source/GameServer/Bots/Bot.vala',
    'source/GameServer/Bots/BotConnection.vala',
    'source/GameServer/Bots/NullBot.vala',
    'source/GameServer/Bots/SimpleBot.vala',
    'source/GameServer/GameState/ServerRoundState.vala',
    'source/GameServer/GameState/ServerRoundStatePlayer.vala',
    'source/GameServer/GameState/ServerRoundStateValidator.vala',
    'source/GameServer/Server/Server.vala',
    'source/GameServer/Server/ServerController.vala',
    'source/GameServer/Server/ServerGameRound.vala',
    'source/GameServer/Server/ServerMenu.vala',
    'source/GameServer/Server/ServerNetworking.vala',
    'source/GameServer/Server/ServerPlayer.vala',
    'source/MainMenu/AboutMenuView.vala',
    'source/MainMenu/CreateServerView.vala',
    'source/MainMenu/InformationMenuView.vala',
    'source/MainMenu/JoinMenuView.vala',
    'source/MainMenu/Lobby/LobbyConnection.vala',
    'source/MainMenu/Lobby/LobbyConnectionView.vala',
    'source/MainMenu/Lobby/LobbyGameListControl.vala',
    'source/MainMenu/Lobby/LobbyInformationListControl.vala',
    'source/MainMenu/Lobby/LobbyUserListControl.vala',
    'source/MainMenu/Lobby/LobbyView.vala',
    'source/MainMenu/MainMenuBackgroundView.vala',
    'source/MainMenu/MainMenuView.vala',
    'source/MainMenu/MenuSubView.vala',
    'source/MainMenu/MultiplayerMenuView.vala',
    'source/MainMenu/OptionItemControl.vala',
    'source/MainMenu/OptionsMenuView.vala',
    'source/MainMenu/SelectGameLogMenuView.vala',
    'source/MainMenu/ServerMenuView.vala',
    'source/MainMenu/ServerPlayerFieldView.vala',
    'source/MainMenu/ServerSettingsView.vala',
    'source/MainMenu/SingleplayerMenuView.vala',
    'source/MainWindow.vala',
    'source/Tests/HandTests.vala',
) + engine_sources

includes = [include_directories('include'), engine_includes]

executable('OpenRiichi', sources,
    dependencies: dependencies,
    include_directories: includes,
    gui_app: true,
    install: true
)
install_subdir('bin/Data', install_dir: dataDir)